--- a/frontend/Home/home.css
+++ b/frontend/Home/home.css
@@ -158,3 +158,35 @@
         font-size: 1em;
     }
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.mdlcontent {
+    background: white;
+    border-radius: 30px;
+    max-width: 600px;
+    width: 80%;
+    height: 80%;
+}
+
+iframe {
+    flex: 1;
+    border: none;
+}
+
+.xbutton {
+    text-decoration: none;
+    color: #fff;
+    float: right;
+}
