--- a/my-react-app/src/styles/home.css
+++ b/my-react-app/src/styles/home.css
@@ -3,7 +3,7 @@
     position: relative;
     height: 60vh;
     min-height: 300px;
-    background: url('../Pictures/clouds.jpg') no-repeat center center/cover;
+    background: url('../assets/clouds.jpg') no-repeat center center/cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +112,7 @@
     height: 160px;
     background-size: cover;
     background-position: center;
-    background-image: url('../Pictures/defaulticon.jpg');
+    background-image: url('../assets/defaulticon.jpg');
 
 }
 
